# SecuritySummitProject-SecureFileDeletion

./: README.md
securedelete/: README.md  log.txt  photorec.ses  pyproject.toml
securedelete/securedelete/: delete.py  main.py
