[tool.poetry]
name = "securedelete"
version = "0.1.0"
description = ""
authors = ["CalebKendra <calebkendra7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.13.0"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
