[tool.poetry]
name = "securedelete"
version = "0.1.0"
description = ""
authors = ["CalebKendra <calebkendra7@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
securedelete = "securedelete.main:cli"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.13.0"
rich = "^13.9.4"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
